feat: add genres section

--- a/themes/book-store/pages/main-page.htm
+++ b/themes/book-store/pages/main-page.htm
@@ -12,7 +12,7 @@ section = "home"
         content=(partial('home/featured-carousel')) 
     %}
     {% partial 'section' 
-        title = 'Категории' 
+        title = 'Жанры' 
         content=(partial('home/categories-grid')) 
     %}
 </div>
